# ml-kem-512

./: .flake8  .gitignore  .pylintrc  ML_KEM_512_IMPLEMENTATION_PLAN.md  documents.txt  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: coverage.yml  lint.yml  release.yml  tests.yml
app/: main.py  ml_kem_generic.py
ml_kem_512/encoding/: __init__.py  codec.py  compress.py
ml_kem_512/kem/: __init__.py  decaps.py  encaps.py  keygen.py
ml_kem_512/module/: __init__.py  vector.py
ml_kem_512/pke/: __init__.py  decrypt.py  encrypt.py  keygen.py  matrix.py
ml_kem_512/polynomial/: __init__.py  ntt.py  poly.py
ml_kem_512/primitives/: __init__.py  hash.py  kdf.py  prf.py
ml_kem_512/sampling/: __init__.py  cbd.py  uniform.py
scripts/: benchmark.py  check_coverage.sh  run_test.sh
tests/: conftest.py
tests/integration/: test_end_to_end.py  test_negative.py  test_performance.py  test_vectors.py
tests/unit/: test_cbd.py  test_codec.py  test_compress.py  test_decaps.py  test_encaps.py  test_kdf.py  test_keygen_components.py  test_keygen_full.py  test_mat_vec.py  test_matrix_gen.py  test_ntt.py  test_poly_mul.py  test_polynomial.py  test_prf.py  test_primitives.py  test_uniform.py  test_vector.py
tests/vectors/: ml_kem_512_vectors.json
